--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3763,3 +3763,9 @@ input, select, textarea {
 	  font-size: 2em;
 	  cursor: pointer;
 	}
+
+	@media (max-width: 768px) {
+	  #lightbox .nav {
+	    display: none;
+	  }
+	}
