--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3769,3 +3769,15 @@ input, select, textarea {
 	    display: none;
 	  }
 	}
+
+	body.no-scroll {
+	  overflow: hidden !important;
+	  overscroll-behavior: none;
+	  pointer-events: none;
+	}
+	
+	body.no-scroll #lightbox,
+	body.no-scroll .lightbox,
+	body.no-scroll .lightbox * {
+	  pointer-events: auto;
+	}
