--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3788,3 +3788,30 @@ input, select, textarea {
 	  margin-right: 2px;
 	  vertical-align: middle;
 	}
+
+	.toggle-btn {
+	  background-color: #fff;
+	  color: #333;
+	  padding: 0.6em 1em;
+	  border: none;
+	  border-radius: 5px;
+	  font-weight: bold;
+	  cursor: pointer;
+	  margin-bottom: 0.5em;
+	  transition: background 0.3s;
+	}
+	
+	.toggle-btn:hover {
+	  background-color: #eee;
+	}
+	
+	.toggle-content {
+	  display: none;
+	  list-style: none;
+	  padding-left: 1.2em;
+	  margin-bottom: 1.5em;
+	}
+	
+	.toggle-content li {
+	  margin-bottom: 0.3em;
+	}
