--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,11 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i");
+@font-face {
+  font-family: 'Themysion';
+  src: url('../fonts/Themysion.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /*
 	Ethereal by HTML5 UP
@@ -3799,6 +3805,7 @@ input, select, textarea {
         align-items: center;
         z-index: 9999;
       }
+
       .popup-content {
         background: #fff;
         color: #111;
@@ -3811,11 +3818,13 @@ input, select, textarea {
         position: relative;
         box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
       }
+
       .popup-content h3 {
         margin-bottom: 1rem;
         font-weight: bold;
         color: #111;
       }
+
       .close-popup {
         position: absolute;
         top: 10px;
@@ -3824,3 +3833,7 @@ input, select, textarea {
         cursor: pointer;
         color: #111;
       }
+
+	.themysion {
+	  font-family: 'Themysion', cursive;
+	}
