--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -699,6 +699,7 @@ input, select, textarea {
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
 	select {
 		height: 2.5rem;
 	}
